// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable orderBy asc Snapshot: should apply sort class and icon 1`] = `
<div
  className="cb-datatable"
  onClick={undefined}
>
  <table>
    <thead>
      <tr>
        <th
          className="sortable sort-asc"
          onClick={[Function]}
        >
          column 0
          <span>
             ▲
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className={null}
        >
          <div
            className="table-cell-content"
          >
            column0 0
          </div>
        </td>
      </tr>
      <tr>
        <td
          className={null}
        >
          <div
            className="table-cell-content"
          >
            column0 1
          </div>
        </td>
      </tr>
      <tr>
        <td
          className={null}
        >
          <div
            className="table-cell-content"
          >
            column0 2
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable orderBy desc Snapshot: should apply sort class and icon 1`] = `
<div
  className="cb-datatable"
  onClick={undefined}
>
  <table>
    <thead>
      <tr>
        <th
          className="sortable sort-desc"
          onClick={[Function]}
        >
          column 0
          <span>
             ▼
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className={null}
        >
          <div
            className="table-cell-content"
          >
            column0 2
          </div>
        </td>
      </tr>
      <tr>
        <td
          className={null}
        >
          <div
            className="table-cell-content"
          >
            column0 1
          </div>
        </td>
      </tr>
      <tr>
        <td
          className={null}
        >
          <div
            className="table-cell-content"
          >
            column0 0
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable should apply renderLayout prop, it displays only table 1`] = `
<table>
  <thead>
    <tr>
      <th
        className="sortable"
        onClick={[Function]}
      >
        column 0
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className={null}
      >
        <div
          className="table-cell-content"
        >
          column0 0
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
